# influence-filtration

./: .gitignore  README.md  pyproject.toml
data/distilgpt2/original-data/: all_eval_results.json  events.out.tfevents.1750697516.kyoto  events.out.tfevents.1750698101.kyoto  final_eval_results.json
src/experiments/: filtering_trajectory_20k.py
src/experiments/influence_results/sentiment_influence/factors_sentiment_factors/: activation_covariance.safetensors  activation_eigenvalues.safetensors  activation_eigenvectors.safetensors  gradient_covariance.safetensors  gradient_eigenvalues.safetensors  gradient_eigenvectors.safetensors  lambda_matrix.safetensors  num_activation_covariance_processed.safetensors  num_gradient_covariance_processed.safetensors  num_lambda_processed.safetensors
src/experiments/influence_results/sentiment_influence/scores_sentiment_scores/: factor_arguments.json  query_dataset_metadata.json  train_dataset_metadata.json
src/experiments/kronfluence/: debug_filtering.py  filtering_trajectory.py  kronfluence_sanity_check.json  query_level.py
src/experiments/kronfluence/dataset-filtration/: filter_imdb_data.py  filtering_trajectory_direct.py
src/experiments/kronfluence/query-stats/: direct_query_eval.py  query_avg_distribution.py  query_inf_histogram.py  run_direct_query_eval.sh  run_query_histogram.sh
src/experiments/kronfluence/stratified-filtration/: get_stratified_influence.py  make_topk_datasets.py  trajectory_plot.py
src/filter/: influence_filter.py
src/train/distilgpt2/: eval_model.py  finetune.py  finetune.sh  run_eval.sh
(+12 files in other folders)
